Refactor: unify ID request handling with specific DTOs across  modules