@@ -1,6 +1,6 @@
 package com.neg.technology.human.resource.Company.service;
 
-import com.neg.technology.human.resource.Utility.RequestLogger;
+import com.neg.technology.human.resource.Business.BusinessLogger;
 import com.neg.technology.human.resource.Company.model.entity.Company;
 import com.neg.technology.human.resource.Company.model.mapper.CompanyMapper;
 import com.neg.technology.human.resource.Company.model.request.CreateCompanyRequest;
@@ -9,6 +9,7 @@ import com.neg.technology.human.resource.Company.model.response.CompanyResponse;
 import com.neg.technology.human.resource.Company.model.response.CompanyResponseList;
 import com.neg.technology.human.resource.Company.repository.CompanyRepository;
 import com.neg.technology.human.resource.Exception.ResourceNotFoundException;
+import com.neg.technology.human.resource.Utility.request.CompanyIdRequest;
 import com.neg.technology.human.resource.Utility.request.IdRequest;
 import com.neg.technology.human.resource.Utility.request.NameRequest;
 import org.springframework.stereotype.Service;
@@ -20,8 +21,6 @@ public class CompanyServiceImpl implements CompanyService {
 
     private final CompanyRepository companyRepository;
 
-    private String message = "Company";
-
     public CompanyServiceImpl(CompanyRepository companyRepository) {
         this.companyRepository = companyRepository;
     }
@@ -30,29 +29,29 @@ public class CompanyServiceImpl implements CompanyService {
     public CompanyResponse createCompany(CreateCompanyRequest request) {
         Company entity = CompanyMapper.toEntity(request);
         Company saved = companyRepository.save(entity);
-        RequestLogger.logCreated(Company.class, saved.getId(), saved.getName());
+        BusinessLogger.logCreated(Company.class, saved.getId(), saved.getName());
         return CompanyMapper.toDTO(saved);
     }
 
     @Override
     public CompanyResponse updateCompany(UpdateCompanyRequest request) {
         Company existing = companyRepository.findById(request.getId())
-                .orElseThrow(() -> new ResourceNotFoundException(message, request.getId()));
+                .orElseThrow(() -> new ResourceNotFoundException("Company", request.getId()));
 
         existing.setName(request.getName());
         Company updated = companyRepository.save(existing);
-        RequestLogger.logUpdated(Company.class, updated.getId(), updated.getName());
+        BusinessLogger.logUpdated(Company.class, updated.getId(), updated.getName());
 
         return CompanyMapper.toDTO(updated);
     }
 
     @Override
-    public void deleteCompany(IdRequest request) {
-        if (!companyRepository.existsById(request.getId())) {
-            throw new ResourceNotFoundException("Company", request.getId());
+    public void deleteCompany(CompanyIdRequest request) {
+        if (!companyRepository.existsById(request.getCompanyId())) {
+            throw new ResourceNotFoundException("Company", request.getCompanyId());
         }
-        companyRepository.deleteById(request.getId());
-        RequestLogger.logDeleted(Company.class, request.getId());
+        companyRepository.deleteById(request.getCompanyId());
+        BusinessLogger.logDeleted(Company.class, request.getCompanyId());
     }
 
     @Override
@@ -61,22 +60,22 @@ public class CompanyServiceImpl implements CompanyService {
                 companyRepository.findAll()
                         .stream()
                         .map(CompanyMapper::toDTO)
-                        .toList()
+                        .collect(Collectors.toList())
         );
     }
 
     @Override
-    public CompanyResponse getCompanyById(IdRequest request) {
-        return companyRepository.findById(request.getId())
+    public CompanyResponse getCompanyById(CompanyIdRequest request) {
+        return companyRepository.findById(request.getCompanyId())
                 .map(CompanyMapper::toDTO)
-                .orElseThrow(() -> new ResourceNotFoundException(message, request.getId()));
+                .orElseThrow(() -> new ResourceNotFoundException("Company", request.getCompanyId()));
     }
 
     @Override
     public CompanyResponse getCompanyByName(NameRequest request) {
         return companyRepository.findByName(request.getName())
                 .map(CompanyMapper::toDTO)
-                .orElseThrow(() -> new ResourceNotFoundException(message, request.getName()));
+                .orElseThrow(() -> new ResourceNotFoundException("Company", request.getName()));
     }
 
     @Override
