@@ -1,26 +1,26 @@
 package com.neg.technology.human.resource.Department.controller;
 
-import com.neg.technology.human.resource.Department.model.entity.Department;
-import com.neg.technology.human.resource.Department.model.mapper.DepartmentMapper;
-import com.neg.technology.human.resource.Department.model.request.CreateDepartmentRequest;
-import com.neg.technology.human.resource.Department.model.request.UpdateDepartmentRequest;
-import com.neg.technology.human.resource.Department.model.response.DepartmentResponse;
-import com.neg.technology.human.resource.Department.service.DepartmentService;
-import com.neg.technology.human.resource.Department.validator.DepartmentValidator;
+import com.neg.technology.human.resource.Utility.request.DepartmentIdRequest;
 import com.neg.technology.human.resource.Utility.request.IdRequest;
 import com.neg.technology.human.resource.Utility.request.NameRequest;
+import com.neg.technology.human.resource.Department.model.request.CreateDepartmentRequest;
+import com.neg.technology.human.resource.Department.model.response.DepartmentResponse;
+import com.neg.technology.human.resource.Department.model.request.UpdateDepartmentRequest;
+import com.neg.technology.human.resource.Department.model.entity.Department;
+import com.neg.technology.human.resource.Department.model.mapper.DepartmentMapper;
+import com.neg.technology.human.resource.Department.service.DepartmentService;
+import com.neg.technology.human.resource.Department.validator.DepartmentValidator;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.responses.ApiResponse;
+import io.swagger.v3.oas.annotations.responses.ApiResponses;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import jakarta.validation.Valid;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.PostMapping;
-import org.springframework.web.bind.annotation.RequestBody;
-import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Tag(name = "Department Controller", description = "Operations related to department management")
 @RestController
@@ -43,26 +43,30 @@ public class DepartmentController {
         List<DepartmentResponse> departments = departmentService.findAll()
                 .stream()
                 .map(DepartmentMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(departments);
     }
 
     @Operation(summary = "Get department by ID", description = "Retrieve a department by its unique ID")
-    @ApiResponse(responseCode = "200", description = "Department found")
-    @ApiResponse(responseCode = "404", description = "Department not found")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Department found"),
+            @ApiResponse(responseCode = "404", description = "Department not found")
+    })
     @PostMapping("/getById")
     public ResponseEntity<DepartmentResponse> getDepartmentById(
             @Parameter(description = "ID of the department to be retrieved", required = true)
-            @Valid @RequestBody IdRequest request) {
+            @Valid @RequestBody DepartmentIdRequest request) {
 
-        return departmentService.findById(request.getId())
+        return departmentService.findById(request.getDepartmentId())
                 .map(department -> ResponseEntity.ok(DepartmentMapper.toDTO(department)))
                 .orElse(ResponseEntity.notFound().build());
     }
 
     @Operation(summary = "Get department by name", description = "Retrieve a department by its name")
-    @ApiResponse(responseCode = "200", description = "Department found")
-    @ApiResponse(responseCode = "404", description = "Department not found")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Department found"),
+            @ApiResponse(responseCode = "404", description = "Department not found")
+    })
     @PostMapping("/getByName")
     public ResponseEntity<DepartmentResponse> getDepartmentByName(
             @Parameter(description = "Name of the department to be retrieved", required = true)
@@ -87,8 +91,10 @@ public class DepartmentController {
     }
 
     @Operation(summary = "Update existing department", description = "Update details of an existing department")
-    @ApiResponse(responseCode = "200", description = "Department updated successfully")
-    @ApiResponse(responseCode = "404", description = "Department not found")
+    @ApiResponses({
+            @ApiResponse(responseCode = "200", description = "Department updated successfully"),
+            @ApiResponse(responseCode = "404", description = "Department not found")
+    })
     @PostMapping("/update")
     public ResponseEntity<DepartmentResponse> updateDepartment(
             @Valid @RequestBody UpdateDepartmentRequest request) {
@@ -105,8 +111,10 @@ public class DepartmentController {
     }
 
     @Operation(summary = "Delete department", description = "Delete a department by ID")
-    @ApiResponse(responseCode = "204", description = "Department deleted successfully")
-    @ApiResponse(responseCode = "404", description = "Department not found")
+    @ApiResponses({
+            @ApiResponse(responseCode = "204", description = "Department deleted successfully"),
+            @ApiResponse(responseCode = "404", description = "Department not found")
+    })
     @PostMapping("/delete")
     public ResponseEntity<Void> deleteDepartment(
             @Parameter(description = "ID of the department to delete", required = true)
@@ -140,7 +148,7 @@ public class DepartmentController {
         List<DepartmentResponse> departments = departmentService.findByLocation(location)
                 .stream()
                 .map(DepartmentMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(departments);
     }
 
@@ -154,7 +162,7 @@ public class DepartmentController {
         List<DepartmentResponse> departments = departmentService.findByLocationContainingIgnoreCase(keyword)
                 .stream()
                 .map(DepartmentMapper::toDTO)
-                .toList();
+                .collect(Collectors.toList());
         return ResponseEntity.ok(departments);
     }
 }
